--- a/bildgalleri.html
+++ b/bildgalleri.html
@@ -3,7 +3,7 @@
 <html lang="sv">
 
 <head>
-	<title> Gammlia Pizzeria </title>
+	<title> Gammlia Pizzeria | Bildgalleri</title>
 	<link rel="stylesheet" href="style.css">
 	<meta name="charset" content="UTF-8"> <!--Visar att vi har med ÅÄÖ på hemsidan-->
 	<meta name="author" content="Sebatian Gabrielsson">
@@ -22,11 +22,11 @@
 			<div class="navtext">
 				<a href="index.html"  ><strong> HEM</strong> </a>
 				<a href="meny.html""><strong>MENY</strong> </a>
-				<a><strong> LUNCH </strong> </a>
+				<a href="lunch.html"><strong> LUNCH </strong> </a>
 				<a href="avhämtning.html"><strong> AVHÄMTNING </strong> </a>
 				<a href="bildgalleri.html" style="color: #BF8E06"> <strong> <ins> BILDGALLERI </ins></strong> </a>
 				<a><strong> KONTAKTA OSS </strong> </a>
-				<a><strong> RECENSIONER </strong> </a>
+				<a href="recensioner.html"><strong> RECENSIONER </strong> </a>
 			</div>
 		</div>
 
