--- a/avhämtning.html
+++ b/avhämtning.html
@@ -3,12 +3,12 @@
 <html lang="sv">
 
 <head>
-	<title> Gammlia Pizzeria </title>
+	<title> Gammlia Pizzeria | Avhämtning</title>
 	<link rel="stylesheet" href="style.css">
 	<meta name="charset" content="UTF-8"> <!--Visar att vi har med ÅÄÖ på hemsidan-->
 	<meta name="author" content="Sebatian Gabrielsson">
-	<meta name="description" content="Gammlia pizzerias hemsida">
-	<meta name="keywords" content="Gammlia pizzeria">
+	<meta name="description" content="Gammlia pizzerias avhämtning">
+	<meta name="keywords" content="Gammlia pizzeria avhämtning">
 
 </head>
 
@@ -22,11 +22,11 @@
 			<div class="navtext">
 				<a href="index.html"><strong> HEM </strong> </a>
 				<a href="meny.html""><strong>MENY</strong> </a>
-				<a><strong> LUNCH </strong> </a>
+				<a href="lunch.html"><strong> LUNCH </strong> </a>
 				<a href="avhämtning.html" style="color: #BF8E06"><strong> <ins> AVHÄMTNING </ins>  </strong> </a>
 				<a href="bildgalleri.html"> <strong> BILDGALLERI </strong> </a>
 				<a><strong> KONTAKTA OSS </strong> </a>
-				<a><strong> RECENSIONER </strong> </a>
+				<a href="recensioner.html"><strong> RECENSIONER </strong> </a>
 			</div>
 		</div>
 
