--- a/kopiera.html
+++ b/kopiera.html
@@ -22,11 +22,11 @@
 			<div class="navtext">
 				<a href="index.html"  style="color: #BF8E06"><strong> <ins> HEM</ins> </strong> </a>
 				<a href="meny.html""><strong>MENY</strong> </a>
-				<a><strong> LUNCH </strong> </a>
+				<a href="lunch.html"><strong> LUNCH </strong> </a>
 				<a href="avhämtning.html"><strong> AVHÄMTNING </strong> </a>
 				<a href="bildgalleri.html"> <strong> BILDGALLERI </strong> </a>
 				<a><strong> KONTAKTA OSS </strong> </a>
-				<a><strong> RECENSIONER </strong> </a>
+				<a href="recensioner.html"><strong> RECENSIONER </strong> </a>
 			</div>
 		</div>
 
