--- a/avhämtning.html
+++ b/avhämtning.html
@@ -25,7 +25,7 @@
 				<a href="lunch.html"><strong> LUNCH </strong> </a>
 				<a href="avhämtning.html" style="color: #BF8E06"><strong> <ins> AVHÄMTNING </ins>  </strong> </a>
 				<a href="bildgalleri.html"> <strong> BILDGALLERI </strong> </a>
-				<a><strong> KONTAKTA OSS </strong> </a>
+				<a href="kontakta oss.html"><strong> KONTAKTA OSS </strong> </a>
 				<a href="recensioner.html"><strong> RECENSIONER </strong> </a>
 			</div>
 		</div>
@@ -46,7 +46,7 @@
 	</div>
     
     <div class="page_info_container">
-        <div class="info_textbox baloo2 green_fade">
+        <div class="info_textbox baloo2 green_fade box_shadow">
             <p style="color: white;" class="text_shadow">
                 Om du av någon anledning inte kan njuta av vår fantastiska mat här på Gammlia Pizzeria, 
                 erbjuder vi en trevlig och enkel möjlighet att ta med maten hem. Beställ, hämta, åk hem och njut!
