--- a/meny.html
+++ b/meny.html
@@ -26,7 +26,7 @@
 				<a href="lunch.html"><strong> LUNCH </strong> </a>
 				<a href="avhämtning.html"><strong> AVHÄMTNING </strong> </a>
 				<a href="bildgalleri.html"><strong> BILDGALLERI </strong> </a>
-				<a><strong> KONTAKTA OSS </strong> </a>
+				<a href="kontakta oss.html"><strong> KONTAKTA OSS </strong> </a>
 				<a href="recensioner.html"><strong> RECENSIONER </strong> </a>
 			</div>
 		</div>
@@ -48,7 +48,7 @@
 	</div>
 
 	<div class="meny_container">
-		<div class="meny_title_container red_fade">
+		<div class="meny_title_container red_fade box_shadow">
 			<div class="meny_title_container_content baloo yellow bold">
 				<h3 class="text_shadow">PIZZOR</h3>
 				<img src="/img/meny/pizza.png">
@@ -70,7 +70,7 @@
 				<p> 99:- </p>
 			</div>
 		</div>
-		<div class="meny_divider red_fade"></div>
+		<div class="meny_divider box_shadow red_fade"></div>
 
 		<div class="meny_options_container">
 			<div class="meny_textbox text_shadow">
@@ -85,7 +85,7 @@
 				<p> 109:- </p>
 			</div>
 		</div>
-		<div class="meny_divider red_fade"></div>
+		<div class="meny_divider box_shadow red_fade"></div>
 
 		<div class="meny_options_container">
 			<div class="meny_textbox text_shadow">
@@ -100,7 +100,7 @@
 				<p> 115:- </p>
 			</div>
 		</div>
-		<div class="meny_divider red_fade"></div>
+		<div class="meny_divider box_shadow red_fade"></div>
 
 		<div class="meny_options_container">
 			<div class="meny_textbox text_shadow">
@@ -115,7 +115,7 @@
 				<p> 115:- </p>
 			</div>
 		</div>
-		<div class="meny_divider red_fade"></div>
+		<div class="meny_divider box_shadow red_fade"></div>
 
 		<div class="meny_options_container">
 			<div class="meny_textbox text_shadow">
@@ -130,7 +130,7 @@
 				<p> 115:- </p>
 			</div>
 		</div>
-		<div class="meny_divider red_fade"></div>
+		<div class="meny_divider box_shadow red_fade"></div>
 
 		<div class="meny_options_container">
 			<div class="meny_textbox text_shadow">
@@ -145,7 +145,7 @@
 				<p> 115:- </p>
 			</div>
 		</div>
-		<div class="meny_divider red_fade"></div>
+		<div class="meny_divider box_shadow red_fade"></div>
 
 		<div class="meny_options_container">
 			<div class="meny_textbox text_shadow">
@@ -160,7 +160,7 @@
 				<p> 115:- </p>
 			</div>
 		</div>
-		<div class="meny_divider red_fade"></div>
+		<div class="meny_divider box_shadow red_fade"></div>
 
 		<div class="meny_options_container">
 			<div class="meny_textbox text_shadow">
@@ -175,7 +175,7 @@
 				<p> 115:- </p>
 			</div>
 		</div>
-		<div class="meny_divider red_fade"></div>
+		<div class="meny_divider box_shadow red_fade"></div>
 
 		<div class="meny_options_container">
 			<div class="meny_textbox text_shadow">
@@ -190,7 +190,7 @@
 				<p> 119:- </p>
 			</div>
 		</div>
-		<div class="meny_divider red_fade"></div>
+		<div class="meny_divider box_shadow red_fade"></div>
 
 		<div class="meny_options_container">
 			<div class="meny_textbox text_shadow">
@@ -205,7 +205,7 @@
 				<p> 119:- </p>
 			</div>
 		</div>
-		<div class="meny_divider red_fade"></div>
+		<div class="meny_divider box_shadow red_fade"></div>
 
 		<div class="meny_options_container">
 			<div class="meny_textbox text_shadow">
@@ -220,7 +220,7 @@
 				<p> 124:- </p>
 			</div>
 		</div>
-		<div class="meny_divider red_fade"></div>
+		<div class="meny_divider box_shadow red_fade"></div>
 
 		<div class="meny_options_container">
 			<div class="meny_textbox text_shadow">
@@ -235,7 +235,7 @@
 				<p> 124:- </p>
 			</div>
 		</div>
-		<div class="meny_divider red_fade"></div>
+		<div class="meny_divider box_shadow red_fade"></div>
 
 		<div class="meny_options_container">
 			<div class="meny_textbox text_shadow">
@@ -253,7 +253,7 @@
 
 		<!-- KOD VEGETARISKA PIZZOR -->
 
-		<div class="meny_title_container green_fade">
+		<div class="meny_title_container green_fade box_shadow">
 			<div class="meny_title_container_content baloo yellow bold">
 				<h3 class="text_shadow">VEGETARISKA PIZZOR</h3>
 				<img src="/img/meny/vegetariskpizza.png">
@@ -273,7 +273,7 @@
 				<p> 104:- </p>
 			</div>
 		</div>
-		<div class="meny_divider green_fade"></div>
+		<div class="meny_divider box_shadow green_fade"></div>
 
 		<div class="meny_options_container">
 			<div class="meny_textbox text_shadow">
@@ -288,7 +288,7 @@
 				<p> 109:- </p>
 			</div>
 		</div>
-		<div class="meny_divider green_fade"></div>
+		<div class="meny_divider box_shadow green_fade"></div>
 
 		<div class="meny_options_container">
 			<div class="meny_textbox text_shadow">
@@ -303,7 +303,7 @@
 				<p> 124:- </p>
 			</div>
 		</div>
-		<div class="meny_divider green_fade"></div>
+		<div class="meny_divider box_shadow green_fade"></div>
 
 		<div class="meny_options_container">
 			<div class="meny_textbox text_shadow">
@@ -318,7 +318,7 @@
 				<p> 115:- </p>
 			</div>
 		</div>
-		<div class="meny_divider green_fade"></div>
+		<div class="meny_divider box_shadow green_fade"></div>
 
 	</div>
 
