--- a/recensioner.html
+++ b/recensioner.html
@@ -22,10 +22,10 @@
 			<div class="navtext">
 				<a href="index.html"><strong>HEM</strong> </a>
 				<a href="meny.html""><strong>MENY</strong> </a>
-				<a href="lunch.html"><strong> LUNCH </strong> </a>
+				<a href=" lunch.html"><strong> LUNCH </strong> </a>
 				<a href="avhämtning.html"><strong> AVHÄMTNING </strong> </a>
 				<a href="bildgalleri.html"> <strong> BILDGALLERI </strong> </a>
-				<a><strong> KONTAKTA OSS </strong> </a>
+				<a href="kontakta oss.html"><strong> KONTAKTA OSS </strong> </a>
 				<a href="recensioner.html" style="color: #BF8E06"><strong> <ins> RECENSIONER </ins></strong> </a>
 			</div>
 		</div>
@@ -41,30 +41,42 @@
 		</div>
 	</nav>
 
-    <div class="page_title_container">
-        <img src="/img/recensioner/Recensioner.png">
-    </div>
+	<div class="page_title_container">
+		<img src="/img/recensioner/Recensioner.png">
+	</div>
 
-    <div class="recensioner_background">
+		<div class="recensioner_background">
+			<div class="username_container box_shadow" style="width: 40%">
+				<input class="review_gray baloo2" type="text" placeholder="Epost...">
+			</div>
 
-        <div class="username_container" style="width: 40%">
-            <input class="review_gray "type="text" placeholder="Epost...">
-        </div>
+			<div class="rating_container review_gray box_shadow">
+				<span class="star">&#9733;</span>
+				<span class="star">&#9733;</span>
+				<span class="star">&#9733;</span>
+				<span class="star">&#9733;</span>
+				<span class="star">&#9733;</span>
+			</div>
+		</div>
 
-        <div class="rating_container review_gray">
-            <span class="star">&#9733;</span>
-            <span class="star">&#9733;</span>
-            <span class="star">&#9733;</span>
-            <span class="star">&#9733;</span>
-            <span class="star">&#9733;</span>
-        </div>
-    </div>
+		<div class="review_container baloo2 box_shadow">
+			<div class="review_textbox">
+				<textarea class="review_gray" type="text" placeholder="Lämna din recension här..."></textarea>
+			</div>
+		</div>
 
-    <div class="review_">
-        <div class="review_container">
-            <input class="review_gray" type="text" placeholder="Lämna din recension här...">
-        </div>
-    </div>
+		<div class="submit_container baloo2">
+			<button class="review_gray box_shadow"> Skicka </button>
+		</div>
+
+		<div class="placeholder_reviews_comtainer">
+			<img src="/img/Recension 1.png">
+			<img src="/img/Recension 1.png">
+			<img src="/img/Recension 1.png">
+			<img src="/img/Recension 1.png">
+			<img src="/img/Recension 1.png">
+			<img src="/img/Recension 1.png">
+		</div>
 
 	<footer>
 		<div class="logo_footer">
