--- a/recensioner.html
+++ b/recensioner.html
@@ -97,7 +97,7 @@
 				<ul class="white">
 					<li> <a> OM OSS</a> </li>
 					<li> <a href="meny.html"> MENY </a></li>
-					<li> <a> KONTAKTA OSS </a> </li>
+					<li> <a href="kontakta oss.html"> KONTAKTA OSS </a> </li>
 				</ul>
 			</div>
 
