--- a/kontakta oss.html
+++ b/kontakta oss.html
@@ -20,12 +20,12 @@
 			</div>
 
 			<div class="navtext">
-				<a href="index.html"  style="color: #BF8E06"><strong> <ins> HEM</ins> </strong> </a>
+				<a href="index.html" style="color: #BF8E06"><strong>HEM </strong> </a>
 				<a href="meny.html""><strong>MENY</strong> </a>
-				<a href="lunch.html"><strong> LUNCH </strong> </a>
+				<a href=" lunch.html"><strong> LUNCH </strong> </a>
 				<a href="avhämtning.html"><strong> AVHÄMTNING </strong> </a>
 				<a href="bildgalleri.html"> <strong> BILDGALLERI </strong> </a>
-				<a href="kontakta oss.html"><strong> KONTAKTA OSS </strong> </a>
+				<a href="kontakta oss.html"><strong> <ins>KONTAKTA OSS</ins> </strong> </a>
 				<a href="recensioner.html"><strong> RECENSIONER </strong> </a>
 			</div>
 		</div>
@@ -41,7 +41,47 @@
 		</div>
 	</nav>
 
-    
+	<div class="form_container">
+		<div class="form_info_container">
+			<h1 class="baloo white text_shadow"> Kontakta oss </h3>
+			<p> Lämna kontaktuppgifter och lite kort om vad du har på hjärtat så hör vi av oss inom 24 timmar!</p>
+			<p> Gammliavägen 3</p>
+			<p> 903 42 Umeå</p>
+			<p> 090-77 53 05</p>
+			<p> info@gammliapizzeria.se</p>
+		</div>
+
+		<div class="form_section_container">
+			<h5>NAMN ELLER FÖRETAG</h4>
+				<input class="box_shadow" placeholder="Ditt namn..." type="text">
+		</div>
+		<div class="form_section_container">
+			<h5>MEJLADRESS</h4>
+				<input class="box_shadow" placeholder="Din mejladress..." type="email">
+		</div>
+		<div class="form_section_container">
+			<h5>TELEFONNUMMER</h4>
+				<input class="box_shadow" placeholder="Ditt telefonnummer..." type="text">
+		</div>
+		<div class="form_section_container">
+			<h5>ÄMNE</h4>
+				<input class="box_shadow" placeholder="Ämne..." type="text">
+		</div>
+		<div class="form_section_container">
+			<h5>MEDDELANDE</h4>
+				<textarea class="box_shadow baloo2" placeholder="Skriv ditt meddelande" type="text"></textarea>
+		</div>
+
+		<div class="checkbox_container">
+			<input type="checkbox">
+			<p class="baloo2 white text_shadow">Jag godkänner att Gammlia pizzeria använder min information för att kontakta mig och jag godkänner deras policy.</p>
+		</div>
+
+		<div class="submit_form_container">
+			<input type="submit" value="Skicka"></submit>
+		</div>
+	</div>
+
 	<footer>
 		<div class="logo_footer">
 			<img src="/img/logo.png" height="55">
@@ -61,7 +101,7 @@
 				<ul class="white">
 					<li> <a> OM OSS</a> </li>
 					<li> <a href="meny.html"> MENY </a></li>
-					<li> <a> KONTAKTA OSS </a> </li>
+					<li> <a href="kontakta oss.html"> KONTAKTA OSS </a> </li>
 				</ul>
 			</div>
 
