--- a/index.html
+++ b/index.html
@@ -41,16 +41,34 @@
 		</div>
 	</nav>
 
-	<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorem eveniet nemo expedita est minima. Amet
-		sed ea voluptate sit natus repellendus rem placeat, veritatis dicta, quae qui suscipit tempora.</p>
-	<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorem eveniet nemo expedita est minima. Amet
-		sed ea voluptate sit natus repellendus rem placeat, veritatis dicta, quae qui suscipit tempora.</p>
-	<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorem eveniet nemo expedita est minima. Amet
-		sed ea voluptate sit natus repellendus rem placeat, veritatis dicta, quae qui suscipit tempora.</p>
-	<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorem eveniet nemo expedita est minima. Amet
-		sed ea voluptate sit natus repellendus rem placeat, veritatis dicta, quae qui suscipit tempora.</p>
-	<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorem eveniet nemo expedita est minima. Amet
-		sed ea voluptate sit natus repellendus rem placeat, veritatis dicta, quae qui suscipit tempora.</p>
+	<div class="top_background_container box_shadow">
+		<div class="image_container">
+			<img src="/img/logo.png">
+			<p class="yellow text_shadow baloo"><b>Välkommen till Gammlia Pizzeria!
+				Hos oss hittar du smakrika pizzor, fräscha sallader och mycket mer – alltid med färska råvaror och kärlek till mat. Kom in och njut av en god lunch eller en härlig middag i en trivsam miljö. Vi har öppet alla dagar i veckan och ser fram emot att servera dig!
+				Välkommen in!</b></p>
+		</div>
+	</div>
+
+	<div class="home_meny_container">
+		<div class="pizza_container">
+			<div class="pizza_text_container">
+				<h3 class="yellow baloo text_shadow">PIZZOR</h3>
+				<p class="yellow baloo text_shadow">
+					Är du sugen på pizza? <a href="meny.html#start_meny"><b><ins>Kolla in vår meny</ins></b></a> här och hitta din favorit!
+				</p>
+			</div>
+		</div>
+		<div class="vegetarisk_container">
+			<div class="pizza_text_container">
+				<h3 class="yellow baloo text_shadow">VEGETARISKA PIZZOR</h3>
+				<p class="yellow baloo text_shadow">
+					Är du ute efter en vegetarisk pizza? <a href="meny.html#vegetarian_meny"><b><ins>Kolla in vår meny</ins></b></a> här och hitta din gröna favorit!
+				</p>
+			</div>
+		</div>
+	</div>
+
 
 	<footer>
 		<div class="logo_footer">
