--- a/lunch.html
+++ b/lunch.html
@@ -3,105 +3,103 @@
 <html lang="sv">
 
 <head>
-    <title> Gammlia Pizzeria | Lunch</title>
-    <link rel="stylesheet" href="style.css">
-    <meta name="charset" content="UTF-8"> <!--Visar att vi har med ÅÄÖ på hemsidan-->
-    <meta name="author" content="Sebatian Gabrielsson">
-    <meta name="description" content="Gammlia pizzerias lunch">
-    <meta name="keywords" content="Gammlia pizzeria lunch">
+	<title> Gammlia Pizzeria | Lunch</title>
+	<link rel="stylesheet" href="style.css">
+	<meta name="charset" content="UTF-8"> <!--Visar att vi har med ÅÄÖ på hemsidan-->
+	<meta name="author" content="Sebatian Gabrielsson">
+	<meta name="description" content="Gammlia pizzerias lunch">
+	<meta name="keywords" content="Gammlia pizzeria lunch">
 
 </head>
 
 <body>
-    <nav>
-        <div class="banner baloo">
-            <div class="logo_nav">
-                <img src="/img/logo.png" height="75">
-            </div>
+	<nav>
+		<div class="banner baloo">
+			<div class="logo_nav">
+				<img src="/img/logo.png" height="75">
+			</div>
 
-            <div class="navtext">
-                <a href="index.html"><strong>HEM </strong> </a>
-                <a href="meny.html""><strong>MENY</strong> </a>
+			<div class="navtext">
+				<a href="index.html"><strong>HEM </strong> </a>
+				<a href="meny.html""><strong>MENY</strong> </a>
 				<a href=" lunch.html" style="color: #BF8E06"><strong> <ins> LUNCH </ins> </strong> </a>
-                <a href="avhämtning.html"><strong> AVHÄMTNING </strong> </a>
-                <a href="bildgalleri.html"> <strong> BILDGALLERI </strong> </a>
-                <a href="kontakta oss.html"><strong> KONTAKTA OSS </strong> </a>
-                <a href="recensioner.html"><strong> RECENSIONER </strong> </a>
-            </div>
-        </div>
+				<a href="avhämtning.html"><strong> AVHÄMTNING </strong> </a>
+				<a href="bildgalleri.html"> <strong> BILDGALLERI </strong> </a>
+				<a href="kontakta oss.html"><strong> KONTAKTA OSS </strong> </a>
+				<a href="recensioner.html"><strong> RECENSIONER </strong> </a>
+			</div>
+		</div>
 
-        <div class="text_size_container baloo">
-            <p>Textstorlek</p>
+		<div class="text_size_container baloo">
+			<p>Textstorlek</p>
 
-            <div class="button_container">
-                <button title="kommer fungera sen med javascript"> + </button>
-                <button title="kommer fungera sen med javascript"> - </button>
-            </div>
+			<div class="button_container">
+				<button title="kommer fungera sen med javascript"> + </button>
+				<button title="kommer fungera sen med javascript"> - </button>
+			</div>
 
-        </div>
-    </nav>
+		</div>
+	</nav>
 
+		<div class="page_title_container">
+			<img src="/img/lunch/lunch.png">
+		</div>
 
-    <div class="page_title_container">
-        <img src="/img/lunch/lunch.png">
-    </div>
+		<div class="lunch_container">
+			<div class="lunch_textbox baloo2 text_shadow box_shadow" style="color: white;">
+				<p>Letar du efter en god och prisvärd lunch i Umeå? Välkommen till Gammlia Pizzeria, där vi serverar en
+					härlig lunch varje måndag till fredag mellan 10:30–14:00!
+					För endast 110 kr får du en varierad lunchmeny som skiftar från dag till dag – alltid med smakrika
+					rätter som passar alla. Självklart ingår även en fräsch salladsbuffé och en 33 cl dricka för att
+					fullända måltiden.
+					Ta en paus i vardagen och njut av en god lunch i trivsam miljö. Vi ses på Gammlia Pizzeria!
+				</p>
+			</div>
 
-    <div class="lunch_container">
+			<div class="video_container">
+				<video src="/img/lunch/lunch video.mp4" autoplay controls width="500px" height="500"></video>
+			</div>
 
+			<iframe
+				src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3519.5742624391737!2d20.281769278234194!3d63.827861277096375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x467c5b1ac1242971%3A0x54d8d4fc73c0247e!2sPizzeria%20Gammlia!5e0!3m2!1ssv!2sse!4v1739119421297!5m2!1ssv!2sse"
+				width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+				referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-        <div class="lunch_textbox baloo2 text_shadow" style="color: white;">
-            <p>Letar du efter en god och prisvärd lunch i Umeå? Välkommen till Gammlia Pizzeria, där vi serverar en härlig lunch varje måndag till fredag mellan 10:30–14:00!
-                För endast 110 kr får du en varierad lunchmeny som skiftar från dag till dag – alltid med smakrika rätter som passar alla. Självklart ingår även en fräsch salladsbuffé och en 33 cl dricka för att fullända måltiden.
-                Ta en paus i vardagen och njut av en god lunch i trivsam miljö. Vi ses på Gammlia Pizzeria!
-            </p>
-        </div>
+		</div>
 
-        <div class="video_container">
-            <video src="/img/lunch/lunch video.mp4" autoplay muted loop width="500px" height="500"></video>
-        </div>
+	<footer>
+		<div class="logo_footer">
+			<img src="/img/logo.png" height="55">
+		</div>
+		<div class="footer_container">
+			<div class="footer_textbox baloo2">
+				<h3 class="baloo yellow"><strong>ÖPPETTIDER</strong></h3>
+				<ul class="white">
+					<li data-day="1">Mån - Tors &nbsp; &nbsp; &nbsp;10:30-20:00 &nbsp;</li>
+					<li data-day="2"> Fre &nbsp; &nbsp; &nbsp; 10:00 - 20:00 &nbsp;</li>
+					<li data-day="3"> Lör - Sön &nbsp; &nbsp; &nbsp; 12:00 - 20:00 &nbsp; </li>
+				</ul>
+			</div>
 
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3519.5742624391737!2d20.281769278234194!3d63.827861277096375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x467c5b1ac1242971%3A0x54d8d4fc73c0247e!2sPizzeria%20Gammlia!5e0!3m2!1ssv!2sse!4v1739119421297!5m2!1ssv!2sse"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
+			<div class="footer_textbox baloo2">
+				<h3 class="baloo yellow"><strong>NAVIGERING</strong></h3>
+				<ul class="white">
+					<li> <a> OM OSS</a> </li>
+					<li> <a href="meny.html"> MENY </a></li>
+					<li> <a href="kontakta oss.html"> KONTAKTA OSS </a> </li>
+				</ul>
+			</div>
 
-    </div>
+			<div class="footer_textbox baloo2">
+				<h3 class="baloo yellow"><strong>KONTAKA OSS</strong></h3>
+				<ul class="white">
+					<li>090-77 53 05&nbsp;</li>
+					<li>info@gammliapizzeria.se&nbsp; </li>
+				</ul>
+			</div>
+		</div>
 
-
-
-    <footer>
-        <div class="logo_footer">
-            <img src="/img/logo.png" height="55">
-        </div>
-        <div class="footer_container">
-            <div class="footer_textbox baloo2">
-                <h3 class="baloo yellow"><strong>ÖPPETTIDER</strong></h3>
-                <ul class="white">
-                    <li data-day="1">Mån - Tors &nbsp; &nbsp; &nbsp;10:30-20:00 &nbsp;</li>
-                    <li data-day="2"> Fre &nbsp; &nbsp; &nbsp; 10:00 - 20:00 &nbsp;</li>
-                    <li data-day="3"> Lör - Sön &nbsp; &nbsp; &nbsp; 12:00 - 20:00 &nbsp; </li>
-                </ul>
-            </div>
-
-            <div class="footer_textbox baloo2">
-                <h3 class="baloo yellow"><strong>NAVIGERING</strong></h3>
-                <ul class="white">
-                    <li> <a> OM OSS</a> </li>
-                    <li> <a href="meny.html"> MENY </a></li>
-                    <li> <a href="kontakta oss.html"> KONTAKTA OSS </a> </li>
-                </ul>
-            </div>
-
-            <div class="footer_textbox baloo2">
-                <h3 class="baloo yellow"><strong>KONTAKA OSS</strong></h3>
-                <ul class="white">
-                    <li>090-77 53 05&nbsp;</li>
-                    <li>info@gammliapizzeria.se&nbsp; </li>
-                </ul>
-            </div>
-        </div>
-
-    </footer>
+	</footer>
 
 </body>
 
