--- a/meny.html
+++ b/meny.html
@@ -42,7 +42,7 @@
 		</div>
 	</nav>
 
-	<div class="page_title_container">
+	<div  id="start_meny" class="page_title_container">
 		<img src="/img/meny/meny_titel.png" height="100">
 
 	</div>
@@ -253,7 +253,7 @@
 
 		<!-- KOD VEGETARISKA PIZZOR -->
 
-		<div class="meny_title_container green_fade box_shadow">
+		<div id="vegetarian_meny" class="meny_title_container green_fade box_shadow">
 			<div class="meny_title_container_content baloo yellow bold">
 				<h3 class="text_shadow">VEGETARISKA PIZZOR</h3>
 				<img src="/img/meny/vegetariskpizza.png">
