--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 			</div>
 
 			<div class="navtext">
-				<a href="index.html"  style="color: #BF8E06"><strong> <ins> HEM</ins> </strong> </a>
+				<a href="index.html" style="color: #BF8E06"><strong> <ins> HEM</ins> </strong> </a>
 				<a href="meny.html""><strong>MENY</strong> </a>
-				<a href="lunch.html"><strong> LUNCH </strong> </a>
+				<a href=" lunch.html"><strong> LUNCH </strong> </a>
 				<a href="avhämtning.html"><strong> AVHÄMTNING </strong> </a>
 				<a href="bildgalleri.html"> <strong> BILDGALLERI </strong> </a>
 				<a href="kontakta oss.html"><strong> KONTAKTA OSS </strong> </a>
@@ -45,8 +45,11 @@
 		<div class="image_container">
 			<img src="/img/logo.png">
 			<p class="yellow text_shadow baloo"><b>Välkommen till Gammlia Pizzeria!
-				Hos oss hittar du smakrika pizzor, fräscha sallader och mycket mer – alltid med färska råvaror och kärlek till mat. Kom in och njut av en god lunch eller en härlig middag i en trivsam miljö. Vi har öppet alla dagar i veckan och ser fram emot att servera dig!
-				Välkommen in!</b></p>
+					Hos oss hittar du smakrika pizzor, fräscha sallader och mycket mer – alltid med färska råvaror och
+					kärlek till mat. Kom in och njut av en god lunch eller en härlig middag i en trivsam miljö. Vi har
+					öppet alla dagar i veckan och ser fram emot att servera dig!
+					Välkommen in!</b></p>
+			<a href="kontakta oss.html" class="baloo">Kontakta oss</a>
 		</div>
 	</div>
 
@@ -55,7 +58,8 @@
 			<div class="pizza_text_container">
 				<h3 class="yellow baloo text_shadow">PIZZOR</h3>
 				<p class="yellow baloo text_shadow">
-					Är du sugen på pizza? <a href="meny.html#start_meny"><b><ins>Kolla in vår meny</ins></b></a> här och hitta din favorit!
+					Är du sugen på pizza? <a href="meny.html#start_meny"><b><ins>Kolla in vår meny</ins></b></a> här och
+					hitta din favorit!
 				</p>
 			</div>
 		</div>
@@ -63,7 +67,8 @@
 			<div class="pizza_text_container">
 				<h3 class="yellow baloo text_shadow">VEGETARISKA PIZZOR</h3>
 				<p class="yellow baloo text_shadow">
-					Är du ute efter en vegetarisk pizza? <a href="meny.html#vegetarian_meny"><b><ins>Kolla in vår meny</ins></b></a> här och hitta din gröna favorit!
+					Är du ute efter en vegetarisk pizza? <a href="meny.html#vegetarian_meny"><b><ins>Kolla in vår
+								meny</ins></b></a> här och hitta din gröna favorit!
 				</p>
 			</div>
 		</div>
