--- a/kontakta oss.html
+++ b/kontakta oss.html
@@ -20,12 +20,12 @@
 			</div>
 
 			<div class="navtext">
-				<a href="index.html" style="color: #BF8E06"><strong>HEM </strong> </a>
+				<a href="index.html"><strong>HEM </strong> </a>
 				<a href="meny.html""><strong>MENY</strong> </a>
 				<a href=" lunch.html"><strong> LUNCH </strong> </a>
 				<a href="avhämtning.html"><strong> AVHÄMTNING </strong> </a>
 				<a href="bildgalleri.html"> <strong> BILDGALLERI </strong> </a>
-				<a href="kontakta oss.html"><strong> <ins>KONTAKTA OSS</ins> </strong> </a>
+				<a href="kontakta oss.html" style="color: #BF8E06"><strong> <ins>KONTAKTA OSS</ins> </strong> </a>
 				<a href="recensioner.html"><strong> RECENSIONER </strong> </a>
 			</div>
 		</div>
