--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					kärlek till mat. Kom in och njut av en god lunch eller en härlig middag i en trivsam miljö. Vi har
 					öppet alla dagar i veckan och ser fram emot att servera dig!
 					Välkommen in!</b></p>
-			<a href="kontakta oss.html" class="baloo">Kontakta oss</a>
+			<a href="recensioner.html" class="baloo">Kontakta oss här</a>
 		</div>
 	</div>
 
@@ -92,7 +92,7 @@
 			<div class="footer_textbox baloo2">
 				<h3 class="baloo yellow"><strong>NAVIGERING</strong></h3>
 				<ul class="white">
-					<li> <a> OM OSS</a> </li>
+					<li> <a href="recensioner.html"> RECENSIONER</a> </li>
 					<li> <a href="meny.html"> MENY </a></li>
 					<li> <a href="kontakta oss.html"> KONTAKTA OSS </a> </li>
 				</ul>
