--- a/meny.html
+++ b/meny.html
@@ -339,7 +339,7 @@
 			<div class="footer_textbox baloo2">
 				<h3 class="baloo yellow"><strong>NAVIGERING</strong></h3>
 				<ul class="white">
-					<li> <a> OM OSS</a> </li>
+					<li> <a href="recensioner.html"> RECENSIONER</a> </li>
 					<li> <a href="meny.html"> MENY </a></li>
 					<li> <a href="kontakta oss.html"> KONTAKTA OSS </a> </li>
 				</ul>
