--- a/index.html
+++ b/index.html
@@ -75,8 +75,31 @@
 	<div class="recensioner_container">
 		<div class="recensioner_textbox">
 			<h2 class="baloo ">Recensioner</h3>
-			<p class="baloo2 ">Vill du berätta om ditt senaste besök eller läsa om andras?</p>
-			<a href="recensioner.html" class="Button baloo">Se våra recensioner</a>
+				<p class="baloo2 ">Vill du berätta om ditt senaste besök eller läsa om andras?</p>
+				<a href="recensioner.html" class="Button baloo">Se våra recensioner</a>
+		</div>
+	</div>
+	<div class="bildgalleri_title_container">
+		<h1 class="baloo text_shadow yellow"><a href="bildgalleri.html"></a><ins><b>BILDGALLERI</b></ins></h1>
+	</div>
+	<div class="bildgalleri_container">
+		<div class="left_container">
+			<div class="small_pictures_container">
+				<img id="one" src="/img/bildgalleri/bild 1.png">
+				<img id="one" src="/img/bildgalleri/bild 2.png">
+			</div>
+			<div class="big_pictures_container">
+				<img id="two" src="/img/bildgalleri/bild 3.png">
+			</div>
+		</div>
+		<div class="right_container">
+			<div class="big_pictures_container">
+				<img id="two" src="/img/bildgalleri/bild 6.png">
+			</div>
+			<div class="small_pictures_container">
+				<img id="one" src="/img/bildgalleri/bild 4.png">
+				<img id="one" src="/img/bildgalleri/bild 5.png">
+			</div>
 		</div>
 	</div>
 
