--- a/kontakta oss.html
+++ b/kontakta oss.html
@@ -3,12 +3,12 @@
 <html lang="sv">
 
 <head>
-	<title> Gammlia Pizzeria </title>
+	<title> Gammlia Pizzeria | Kontakta oss</title>
 	<link rel="stylesheet" href="style.css">
 	<meta name="charset" content="UTF-8"> <!--Visar att vi har med ÅÄÖ på hemsidan-->
 	<meta name="author" content="Sebatian Gabrielsson">
-	<meta name="description" content="Gammlia pizzerias hemsida">
-	<meta name="keywords" content="Gammlia pizzeria">
+	<meta name="description" content="Gammlia pizzerias kontakta oss">
+	<meta name="keywords" content="Gammlia pizzeria kontakta oss">
 
 </head>
 
