--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					kärlek till mat. Kom in och njut av en god lunch eller en härlig middag i en trivsam miljö. Vi har
 					öppet alla dagar i veckan och ser fram emot att servera dig!
 					Välkommen in!</b></p>
-			<a href="recensioner.html" class="Button baloo">Kontakta oss här</a>
+			<a href="kontakta oss.html" class="Button baloo">Kontakta oss här</a>
 		</div>
 	</div>
 	<div class="home_meny_container">
@@ -74,7 +74,7 @@
 	</div>
 	<div class="recensioner_container">
 		<div class="recensioner_textbox">
-			<h2 class="baloo ">Recensioner</h3>
+			<h2 class="baloo ">Recensioner</h2>
 				<p class="baloo2 ">Vill du berätta om ditt senaste besök eller läsa om andras?</p>
 				<a href="recensioner.html" class="Button baloo">Se våra recensioner</a>
 		</div>
@@ -100,6 +100,11 @@
 				<img id="one" src="/img/bildgalleri/bild 4.png">
 				<img id="one" src="/img/bildgalleri/bild 5.png">
 			</div>
+		</div>
+	</div>
+	<div class="table_link_container">
+		<div class="table_link_textbox yellow text_shadow red_fade baloo">
+			<a href="table.html"><h2>Hittade inget bra ställe att lägga in en tabell så visar det här</h2></a>
 		</div>
 	</div>
 
